--- a/Week2/characters.html
+++ b/Week2/characters.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characters in the Hill Family</title>
 </head>
+
+<link rel="stylesheet" href="styles.css">
 <body>
-    <div>
+    <div id="navi">
         <a href="index.html">Home</a><br>
         <a href="characters.html">Characters</a><br>
         <a href="favorite.html">Favorite Character Form</a>
 
     </div>
-    <!--I used images on this page with the alt element for text description & decided to use relative file paths for each image.
-     I used lists to list their traits, and put these all within a table with the table row and table data tags.
-     I used another size header for the character's names.-->
+
     <h1>Characters in the Hill Family</h1>
-    <table>
+
+    <table align="center">
     
 <tr>
-<th><img src="hank.jpg" alt="Hank Hill" width="300px">
+<th><img src="hank.jpg" alt="Hank Hill" height="150px">
 <h3>Hank Hill</h3></th>
 
-<th><img src="peggy.jpg" alt="Peggy Hill" width="300px">
+<th><img src="peggy.jpg" alt="Peggy Hill" width="150px">
 <h3>Peggy Hill</h3></th>
 
-<th><img src="bobby.jpg" alt="Bobby Hill" width="300px">
+<th><img src="bobby.jpg" alt="Bobby Hill" height="150x">
 <h3>Bobby Hill</h3></th>
 
-<th><img src="louanne.jpg" alt="Louanne Platter" width="300px">
+<th><img src="louanne.jpg" alt="Louanne Platter" width="150px">
 <h3>Louanne Platter</h3></th>
 
     </tr>
