--- a/Week2/index.html
+++ b/Week2/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--I chose a title for all 3 pages.-->
     <title>King of the Hill</title>
+    <!--I'm using an external style sheet, shown here in the header of all 3 pages.-->
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--I decided to put a div with navigation between all three pages at the top, with breaks in between links.-->
-    <div>
+     <div id="navi">
         <a href="index.html">Home</a><br>
         <a href="characters.html">Characters</a><br>
         <a href="favorite.html">Favorite Character Form</a>
 
     </div>
-    <h1>Welcome</h1>
+    <h1 class="welcome">Welcome</h1>
+    <div class="centerdiv">
+    <img class="header" src="/kothheader.jpg">
     <p>On this site you'll get some information about the animated TV Show King of the Hill, written by Mike Judge.</p>
     <p>You can use the navigation at the top!</p>
+    </div>
 </body>
 </html>
