--- a/Week2/favorite.html
+++ b/Week2/favorite.html
@@ -6,17 +6,19 @@
     <title>Favorite Character</title>
     <!--This is where I put my form to input your name and vote for your favorite character, and submit.
     When I hit submit the form information appears in the URL.-->
+    
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
+    <div id="navi">
         <a href="index.html">Home</a><br>
         <a href="characters.html">Characters</a><br>
         <a href="favorite.html">Favorite Character Form</a>
 
     </div>
     <h1>Who's your favorite character on the show?</h1>
-    It's hard to decide so I've narrowed it down to just the immediate family for you.
-
+    <p>It's hard to decide so I've narrowed it down to just the immediate family for you.</p>
+<div class="centerdiv">
     <form>
         <input type="text" name="firstname" placeholder="First Name"><br>
         <input type="text" name="lastname" placeholder="Last Name"><br><br>
@@ -27,6 +29,7 @@
         <input type="radio" name="character" value="Bobby">Bobby <br>
         <input type="submit" value="Submit">
         </form>
+    </div>
         <br>
 </body>
 </html>
